--- a/ProjectProposal.ipynb
+++ b/ProjectProposal.ipynb
@@ -41,9 +41,9 @@
     "\n",
     "Replace the lines below to list each persons full student ID. Add lines as needed for your group size, and make sure each ID is listed on a separate line. \n",
     "\n",
-    "- A########\n",
-    "- A########\n",
-    "- A########"
+    "- A92070847\n",
+    "- A12009395\n",
+    "- A13435306"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your research question here*"
+    "Are older/initial users increasingly more active using Bitcoin? Is the result consistent with the rise or decrease in popularity of cryptocurrency?"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your hypotheses here*"
+    "Older users of Bitcoin will be more active in the network than newer users, through an increased rate of transactions and an expanded financial network. Higher activity would be consistent with the rise in popularity of cryptocurrency in the world, which is reported by media outlets and financial journals. "
    ]
   },
   {
@@ -91,16 +91,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your dataset information here*\n",
+    "- Dataset Name: MIT Bitcoin transaction inputs\n",
+    "- Link to the dataset: https://senseable2015-6.mit.edu/bitcoin/\n",
+    "- Number of observations: ~800 million\n",
     "\n",
-    "(Copy this information for each dataset)\n",
-    "- Dataset Name:\n",
-    "- Link to the dataset:\n",
-    "- Number of observations:\n",
+    "- Dataset Name: MIT Bitcoin transaction outputs\n",
+    "- Link to the dataset: https://senseable2015-6.mit.edu/bitcoin/\n",
+    "- Number of observations: ~400 million\n",
     "\n",
-    "1-2 sentences describing the dataset. \n",
-    "\n",
-    "If you plan to use multiple datasets, add 1-2 sentences about how you plan to combine these datasets."
+    "Description and combination: \n",
+    "We will combine the inputs and the outputs of each transaction in the dataset into a list of linked transactions where we can analyze the relationships between accounts. Since the Bitcoin transaction records are in chronological order, for each Bitcoin address sample we draw, we will use the timestamp of the first transaction to determine the age of the Bitcoin account, and then analyze the correlation between the ages of the Bitcoin Addresses and the rate of transactions of the Bitcoin Addresses. We expect to see that older Bitcoin users will have a higher rate of transactions than newer users, and that transaction rate for users will be increasing over time."
    ]
   },
   {
@@ -122,11 +122,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your background and prior work here* \n",
+    "Cryptocurrency was majorly introduced and acknowledged only recently in the 21st century. It is a concept that continues to remain a mystery for most people, and yet is steadily gaining popularity and increasing usership, especially among major financial institutions such as banks, governments, and large tech companies. In fact, nearly all major financial firms and prominent software companies have by now performed substantial research on various types of cryptocurrency. This suggests a question of whether cryptocurrency will soon become the foundation of the world’s economy, or in the very least be a widely used form of currency among people in the near future.\n",
+    "\n",
+    "According to Forbes, a cryptocurrency such as Bitcoin will gradually rise in popularity and will become a widespread form of commonly used currency because of its reliability, in that it can’t be bounced or charged back, and works 24/7, 365 days a year. It is easily accessible during emergencies, such as earthquakes and hurricanes, while a bank could be shut down. Researchers at MIT have performed extensive analysis of the same datasets we will be using, coming to the conclusion that powerful Bitcoin users form advanced financial networks to significantly expand their wealth. This information would suggest that users would be increasing their activity using Bitcoin, and therefore lead to the logical hypothesis that older users are steadily becoming more active using the Bitcoin platform. \n",
+    "\n",
     "\n",
     "References (include links):\n",
-    "- 1)\n",
-    "- 2)"
+    "- 1) https://senseable2015-6.mit.edu/bitcoin/\n",
+    "- 2) http://www.vo.elte.hu/bitcoin/\n",
+    "- 3) https://blockgeeks.com/guides/what-is-cryptocurrency/\n",
+    "- 4) https://www.forbes.com/sites/investor/2019/02/15/bitcoin-really-is-money-heres-why/#6d569bc479d2"
    ]
   },
   {
@@ -147,17 +152,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your proposed methods information here:*\n",
+    "Data Cleaning:\n",
+    "Bitcoin uses a change based system where a user breaks up whole Bitcoins into pieces in order to spend them. When it comes time to spend Bitcoins the wallet software will round up as much change as it can and send it to the recipient. Our datasets show the change being sent. This clutters the data and is unnecessary for our analysis. We will clean the data by consolidating the change into a single value. As the dataset is much too large to process and analyze, we will analyze only a certain number of Bitcoin addresses by doing the following steps: set a certain number of  groups, each of which corresponds to a time interval; divide the Bitcoin addresses in the dataset into the groups according to the timestamp of the first transaction; randomly draw a certain number of samples from each group. Then we gather all the transaction information in the dataset for all the sample we draw.\n",
     "\n",
-    "*Data Cleaning (2-3 sentences)*\n",
+    "Data Analysis:\n",
+    "We must check the distributions of amount of Bitcoin, and the quantity of transactions for every address in the sample. We can do this with pandas. This step will give us clues as to how users activity is distributed. We can then plot the age of account against number of transactions and the account balance. With the data we can perform a linear regression, and plot the line of best fit.\n",
     "\n",
-    "*Data Analysis (1-2 paragraphs)*\n",
-    "\n",
-    "*What to report (2-3 sentences)*\n",
+    "What to report:\n",
+    "We will plot the histograms of the distributions described above. We will also plot the the age of account against funds in the account and quantity of transactions. We can use the regression model to predict its error.\n",
     "\n",
     "Packages we plan to use:\n",
-    "- a\n",
-    "- b"
+    "- a Pandas: \n",
+    "We can use this for histograms and plotting, as well as pre-processing the data in an organized and efficient manner.\n",
+    "\n",
+    "- b D3: \n",
+    "We may use this for more beautiful visualizations if given the time."
    ]
   },
   {
@@ -173,7 +182,11 @@
     "- Are there any other issues related to your topic area, data, and/or analyses that are potentially problematic in terms of data privacy and equitable impact?\n",
     "- How will you handle any issues you identify?\n",
     "\n",
-    "(1-2 paragraphs)"
+    "(1-2 paragraphs)\n",
+    "\n",
+    "This dataset is publicly available across several websites, including that of MIT that published its findings on Bitcoin research. User information is entirely anonymous, with the user’s address encrypted with a code, and this serving as the only user identifier. This data has been released to the public for research purposes, and analyzing it does not pose ethical violations. \n",
+    "The dataset contains every single Bitcoin transaction, beginning with the release of Bitcoin to the public and up to approximately February 9, 2008. This eliminates the possibility of bias within the data collection method, as the dataset contains all of the existing information. As we will only be using a subset of this large dataset, we will be using random selection of users to ensure that our subset is a valid representation of the original dataset. This being said, this dataset obviously only contains information on Bitcoin user transaction. While the results of this analysis could provide insight into trends in the tech community, it may not be generalizable to the entire US or world population, as the majority of Bitcoin users are likely highly educated in the world of technology or finance. \n",
+    "However, an understanding of whether Bitcoin users are more actively using the platform may be a strong foundation for deducing whether cryptocurrency may be more widely adopted by the general population in the world. "
    ]
   },
   {
@@ -196,7 +209,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your discussion information here*"
+    "If our hypothesis is correct we will make two contributions to the cryptocurrency field. We will have provided a useful framework for predicting the activity of Bitcoin accounts through time. This framework may also be applied to other cryptocurrency networks. Using our regression model we can also view trends in the activity of the entire Bitcoin network. Showing if there is an increase or decrease in usage in the total population. \n",
+    "\n",
+    "If our methods did not work there may be more variables worth looking at with regards to usage. There are possible confounds with regards to the continuously moving exchange rate between fiat (United States Dollars, Euros, etc) and Bitcoin. It may be required to convert Bitcoin to fiat to improve the study. "
    ]
   }
  ],
@@ -216,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
