handle txin and txout
Split txin and txout. Do dropping operations on each subfile.

--- a/Drop Irrelevant Columns.ipynb
+++ b/Drop Irrelevant Columns.ipynb
@@ -3,17 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Imports\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# file path for data\n",
@@ -23,8 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# read data\n",
@@ -34,8 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set column names\n",
@@ -45,8 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# drop irrelevant columns\n",
@@ -56,28 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   block ID   timestamp\n",
-      "0         1  1231469665\n",
-      "1         2  1231469744\n",
-      "2         3  1231470173\n",
-      "3         4  1231470988\n",
-      "4         5  1231471428\n",
-      "   transaction ID  block ID\n",
-      "0               1         1\n",
-      "1               2         2\n",
-      "2               3         3\n",
-      "3               4         4\n",
-      "4               5         5\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# check head after drop\n",
     "print(df_block_hash.head())\n",
@@ -86,8 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# write block hash dataframe to a new dat file\n",
@@ -97,12 +93,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tx_drop_filepath = 'data/tx_simplified.dat'\n",
-    "df_transaction.to_csv(path_or_buf = tx_drop_filepath, sep = '\\t', index = False, columns = ['transaction ID', 'block ID'])"
+    "df_transaction.to_csv(path_or_buf = tx_drop_filepath, sep = '\\t', index = False, \n",
+    "                      columns = ['transaction ID', 'block ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!split -l 70000000 data/txin.dat t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!split -l 70000000 data/txout.dat m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_txin_file = 11\n",
+    "\n",
+    "txin_input_filepath = ['txin/taa', 'txin/tab', 'txin/tac', 'txin/tad', 'txin/tae', 'txin/taf', 'txin/tag', 'txin/tah',\n",
+    "                      'txin/tai', 'txin/taj', 'txin/tak']\n",
+    "txin_output_filepath = ['txin/txin_1.dat', 'txin/txin_2.dat', 'txin/txin_3.dat', 'txin/txin_4.dat', 'txin/txin_5.dat', \n",
+    "                        'txin/txin_6.dat', 'txin/txin_7.dat', 'txin/txin_8.dat', 'txin/txin_9.dat', 'txin/txin_10.dat', \n",
+    "                        'txin/txin_11.dat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in range(num_txin_file):\n",
+    "    curr_input_filepath = txin_input_filepath[x]\n",
+    "    curr_output_filepath = txin_output_filepath[x]\n",
+    "    \n",
+    "    df_txin = pd.read_csv(curr_input_filepath, sep = '\\t')\n",
+    "    \n",
+    "    df_txin.columns = ['transaction ID', 'input sequence', 'previous transaction ID', 'previous output sequence', \n",
+    "                       'address ID', 'sum']\n",
+    "    \n",
+    "    df_txin.drop(['input sequence', 'previous transaction ID', 'previous output sequence', 'sum'], \n",
+    "                 axis = 1, inplace = True)\n",
+    "    \n",
+    "    df_txin.to_csv(path_or_buf = curr_output_filepath, sep = '\\t', index = False, \n",
+    "                   columns = ['transaction ID', 'address ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_txout_file = 12\n",
+    "\n",
+    "txout_input_filepath = ['txout/maa', 'txout/mab', 'txout/mac', 'txout/mad', 'txout/mae', 'txout/maf', 'txout/mag', \n",
+    "                        'txout/mah', 'txout/mai', 'txout/maj', 'txout/mak', 'txout/mal']\n",
+    "txout_output_filepath = ['txout/txout_1.dat', 'txout/txout_2.dat', 'txout/txout_3.dat', 'txout/txout_4.dat', \n",
+    "                         'txout/txout_5.dat', 'txout/txout_6.dat', 'txout/txout_7.dat', 'txout/txout_8.dat', \n",
+    "                         'txout/txout_9.dat', 'txout/txout_10.dat', 'txout/txout_11.dat', 'txout/txout_12.dat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for x in range(num_txout_file):\n",
+    "    curr_input_filepath = txout_input_filepath[x]\n",
+    "    curr_output_filepath = txout_output_filepath[x]\n",
+    "    \n",
+    "    df_txout = pd.read_csv(curr_input_filepath, sep = '\\t')\n",
+    "    \n",
+    "    df_txout.columns = ['transaction ID', 'output sequence', 'address ID', 'sum']\n",
+    "    \n",
+    "    df_txout.drop(['output sequence', 'sum'], axis = 1, inplace = True)\n",
+    "    \n",
+    "    df_txout.to_csv(path_or_buf = curr_output_filepath, sep = '\\t', index = False, \n",
+    "                   columns = ['transaction ID', 'address ID'])"
    ]
   }
  ],
