edit part 1 and 2 outlines
edit part 1 and 2 outlines

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -262,8 +262,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2: Normal Distribution and T-test"
+    "## Part 2: Sample Datasets\n",
+    "Data files at this point:\n",
+    "\n",
+    "block hash: bh.dat\n",
+    "\n",
+    "transaction overview: tx.dat\n",
+    "\n",
+    "transaction input: txin_2010.dat, txin_2012.dat, txin_2014.dat, txin_2016.dat\n",
+    "\n",
+    "transaction output: txout_2010.dat, txout_2012.dat, txout_2014.dat, txout_2016.dat"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2a) Load the Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2b) Sample Address ID"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2c) Accumulate Number of Transactions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3: Normal Distribution and T-test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3a) Mean number of transactions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3d) Normal Distribution Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -271,6 +327,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 4: Analysis of Variance/ANOVA"
+   ]
   },
   {
    "cell_type": "code",
@@ -304,49 +367,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 3: Analysis of Variance/ANOVA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 4: Linear Model"
+    "## Part 5: Linear Model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5: Further Analysis"
+    "## Part 6: Further Analysis"
    ]
   },
   {
