update part 2 outline
update part 2 outline

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -41,9 +41,13 @@
     "\n",
     "Result:\n",
     "\n",
-    "bh.dat: | Block ID | Block Timestamp |\n",
+    "bh.dat: \n",
     "\n",
-    "tx.dat: |Transaction ID | Block ID |"
+    "| Block ID | Block Timestamp |\n",
+    "\n",
+    "tx.dat: \n",
+    "\n",
+    "|Transaction ID | Block ID |"
    ]
   },
   {
@@ -132,7 +136,9 @@
     "\n",
     "Result:\n",
     "\n",
-    "txin_1.dat - txin_11.dat: | Transaction ID | Address ID |"
+    "txin_1.dat - txin_11.dat: \n",
+    "\n",
+    "| Transaction ID | Address ID |"
    ]
   },
   {
@@ -193,7 +199,9 @@
     "\n",
     "Result:\n",
     "\n",
-    "txout_1.dat - txout_12.dat: | Transaction ID | Address ID |"
+    "txout_1.dat - txout_12.dat: \n",
+    "\n",
+    "| Transaction ID | Address ID |"
    ]
   },
   {
@@ -248,7 +256,15 @@
    "metadata": {},
    "source": [
     "## 1d) Convert UNIX time to standard time\n",
-    "Implement a function that converts UNIX to standard time; add a column \"year\" in bh.dat."
+    "Implement a function that converts UNIX to standard time; add a column \"year\" in bh.dat.\n",
+    "\n",
+    "Before: \n",
+    "\n",
+    "| Block ID | Block Timestamp |\n",
+    "\n",
+    "After: \n",
+    "\n",
+    "| Block ID | Block Timestamp | Month | Year |"
    ]
   },
   {
@@ -278,21 +294,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2a) Load the Data"
+    "## 2a) Load the Data\n",
+    "Load data above into dataframes."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2b) Sample Address ID"
+    "## 2b) Sample Address ID\n",
+    "Sample 100 address IDs in each transaction input/output dat file."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2c) Accumulate Number of Transactions"
+    "## 2c) Accumulate Number of Transactions\n",
+    "Initialize the following dataframe:\n",
+    "\n",
+    "| Address ID | NumTX |\n",
+    "\n",
+    "Address ID: Bitcoin account identifier\n",
+    "\n",
+    "NumTx: Number of transactions in total belong to that Bitcoin Address ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterate through all the transaction inputs and outputs; accumulate the numbers of transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
    ]
   },
   {
