complete part 2 markdown cells
complete part 2 markdown cells

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -299,23 +299,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 2b) Sample Address ID\n",
-    "Sample 100 address IDs in each transaction input/output dat file."
+    "# Code here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2c) Accumulate Number of Transactions\n",
+    "## 2b) Initialize the Dataframe\n",
     "Initialize the following dataframe:\n",
     "\n",
-    "| Address ID | NumTX |\n",
+    "| Address ID | Year | NumTX |\n",
     "\n",
     "Address ID: Bitcoin account identifier\n",
+    "\n",
+    "Year: Year in which the Address ID has its first transaction\n",
     "\n",
     "NumTx: Number of transactions in total belong to that Bitcoin Address ID"
    ]
@@ -333,7 +336,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Iterate through all the transaction inputs and outputs; accumulate the numbers of transactions"
+    "## 2c) Sample Address ID\n",
+    "\n",
+    "Sample 100 address IDs in each transaction input/output dat file.\n",
+    "\n",
+    "Update the following columns in the dataframe:\n",
+    "\n",
+    "| Address ID | Year |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2d) Accumulate Number of Transactions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterate through all the transaction inputs and outputs; accumulate the numbers of transactions for each sample.\n",
+    "\n",
+    "Update the following columns in the dataframe:\n",
+    "\n",
+    "| NumTX |"
    ]
   },
   {
@@ -349,7 +385,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 3: Normal Distribution and T-test"
+    "## Part 3: Normal Distribution and T-test\n",
+    "Apply Normal Distributions and T-tests to samples from the following 2 groups:\n",
+    "\n",
+    "Group 1:\n",
+    "\n",
+    "Year in 2010 or 2011\n",
+    "\n",
+    "Group 2:\n",
+    "\n",
+    "Year in 2016 or 2017"
    ]
   },
   {
