edit part 4 and 5 markdowns
edit part 4 and 5 markdowns

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -275,6 +275,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -338,7 +347,7 @@
    "source": [
     "## 2c) Sample Address ID\n",
     "\n",
-    "Sample 100 address IDs in each transaction input/output dat file.\n",
+    "Randomly Sample 100 address IDs in each transaction input/output dat file.\n",
     "\n",
     "Update the following columns in the dataframe:\n",
     "\n",
@@ -386,48 +395,42 @@
    "metadata": {},
    "source": [
     "## Part 3: Normal Distribution and T-test\n",
-    "Apply Normal Distributions and T-tests to samples from the following 2 groups:\n",
+    "Apply Normal Distributions and T-tests to the following 2 groups of samples only:\n",
     "\n",
     "Group 1:\n",
     "\n",
-    "Year in 2010 or 2011\n",
+    "Samples of Address IDs that have their first transaction in year 2010 or 2011\n",
     "\n",
     "Group 2:\n",
     "\n",
-    "Year in 2016 or 2017"
+    "Samples of Address IDs that have their first transaction in year 2016 or 2017"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3a) Mean number of transactions"
+    "## 3a) Mean number of transactions\n",
+    "What is the average number of transactions for address IDs from each of the 2 groups?\n",
+    "\n",
+    "Get a taste of how different the means are."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3d) Normal Distribution Test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 4: Analysis of Variance/ANOVA"
+    "## 3b) Normal Distribution Test\n",
+    "Check that each of the 2 groups has nearly normal distribution."
    ]
   },
   {
@@ -435,34 +438,181 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Code here"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5: Linear Model"
+    "## 3c) Compare Number of Samples and Population\n",
+    "Check that the number of samples is < 10 % of the total population."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3d) T-test\n",
+    "Apply the T-test to the 2 groups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 4: Analysis of Variance/ANOVA\n",
+    "Apply ANOVA to all the 4 groups of samples:\n",
+    "\n",
+    "Group 1:\n",
+    "\n",
+    "Samples of Address IDs that have their first transaction in year 2010 or 2011\n",
+    "\n",
+    "Group 2:\n",
+    "\n",
+    "Samples of Address IDs that have their first transaction in year 2012 or 2013\n",
+    "\n",
+    "Group 3:\n",
+    "\n",
+    "Samples of Address IDs that have their first transaction in year 2014 or 2015\n",
+    "\n",
+    "Group 4:\n",
+    "\n",
+    "Samples of Address IDs that have their first transaction in year 2016 or 2017"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4a) Normal Distribution Test\n",
+    "Check that each group has nearly normal distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4b) Compare Number of Samples and Population\n",
+    "Check that the number of samples is < 10 % of the total population."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4c) ANOVA test\n",
+    "Apply ANOVA to the 4 groups of samples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 5: Linear Model\n",
+    "Apply a Linear Model to the data.\n",
+    "\n",
+    "Independent variable:\n",
+    "\n",
+    "time: month and year when the address ID has its first transaction\n",
+    "\n",
+    "Dependent variable:\n",
+    "\n",
+    "NumTx: Number of total transactions for each address ID"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5a) Create Linear Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5b) Correlation Coefficient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5c) Predict Number of Transactions from Age of Address ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code here"
    ]
   },
   {
