--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -268,6 +268,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "file='bh_simplified.dat'\n",
+    "\n",
+    "df=pd.read_csv(file, sep='\\t')\n",
+    "\n",
+    "def getYear(data):\n",
+    "    d=datetime.fromtimestamp(data)\n",
+    "    return d.timetuple().tm_year\n",
+    "def getMonth(data):\n",
+    "    d=datetime.fromtimestamp(data)\n",
+    "    return d.timetuple().tm_mon\n",
+    "\n",
+    "df['month']=df['timestamp'].apply(getMonth)\n",
+    "df['year']=df['timestamp'].apply(getYear)\n",
+    "\n",
+    "df.to_csv('bh_readable.dat', sep='\\t', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -632,21 +656,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py37",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
